--- a/index.css
+++ b/index.css
@@ -1253,6 +1253,10 @@ html {
     justify-content: center;
     gap: 30px;
 }
+.feature li{
+    list-style: none;
+    margin-top: 10px;
+}
 
 .feature {
     border-radius: 10px;
